<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2024 The LineageOS Project
    SPDX-License-Identifier: Apache-2.0
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- DO NOT TRANSLATE Empty summary for dynamic preferences -->
    <string name="summary_empty" translatable="false"></string>

    <!-- App Name -->
    <string name="glyph_settings_app_name">Glyph interface</string>

    <!-- Ambient Display -->
    <string name="glyph_settings_enable">Glyph lights</string>
    <string name="glyph_settings_title">Glyph interface</string>
    <string name="glyph_settings_summary">Options for Glyph lights</string>

    <string name="glyph_settings_flip_toggle_title">Flip to Glyph</string>
    <string name="glyph_settings_flip_toggle_summary">Mute and show Glyphs if phone is faced down</string>

    <string name="glyph_settings_brightness">Brightness</string>

    <string name="glyph_settings_charging_title">Charging</string>
    <string name="glyph_settings_charging_level_title">Battery level</string>
    <string name="glyph_settings_charging_level_summary">Show battery level when plugging in</string>
    <string name="glyph_settings_charging_powershare_title">Reverse wireless charging</string>
    <string name="glyph_settings_charging_powershare_summary">Show an animation when reverse wireless charging is detected</string>

    <string name="glyph_settings_call_title">Calls</string>
    <string name="glyph_settings_call_toggle_title">Call animation</string>
    <string name="glyph_settings_call_toggle_summary">Flash LEDs on incoming calls</string>
    <string name="glyph_settings_call_sub_toggle_title">Enable call animation</string>
    <string name="glyph_settings_call_sub_animations_title">Pattern</string>

    <string name="glyph_settings_notifs_title">Notifications</string>
    <string name="glyph_settings_notifs_toggle_title">Notification animation</string>
    <string name="glyph_settings_notifs_toggle_summary">Flash LEDs on new notifications</string>
    <string name="glyph_settings_notifs_sub_title">Apps to allow</string>
    <string name="glyph_settings_notifs_sub_toggle_title">Enable notification animation</string>
    <string name="glyph_settings_notifs_sub_animations_title">Pattern</string>
    <string name="glyph_settings_notifs_sub_essential_title">Essential Notifications</string>
    <string name="glyph_settings_notifs_sub_essential_summary">Essential Glyph will be displayed until Essential notifications are read or dismissed</string>

    <string name="glyph_settings_volume_title">Volume</string>
    <string name="glyph_settings_volume_level_toggle_title">Volume indicator</string>
    <string name="glyph_settings_volume_level_toggle_summary">Show volume level when adjusting</string>

    <string name="glyph_settings_misc_title">Miscellaneous</string>
    <string name="glyph_settings_music_visualizer_toggle_title">Music Visualizer</string>
    <string name="glyph_settings_music_visualizer_toggle_summary">DISCO LIGHTS!\nthis will disable all other glyph functions while enabled</string>

    <!-- QS tile -->
    <string name="glyph_accessibility_quick_settings">Glyph</string>
    <string name="glyph_accessibility_quick_settings_torch">Glyph torch</string>

    <string name="glyph_accessibility_quick_settings_off">Off</string>
    <string name="glyph_accessibility_quick_settings_on">On</string>

</resources>
