<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2024 The LineageOS Project
    SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/glyph_settings_notifs_toggle_title">

    <org.lineageos.glyph.Preference.GlyphAnimationPreference
        android:key="glyph_settings_notifs_sub_preview"
        android:selectable="false" />

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="glyph_settings_notifs_sub_toggle"
        android:title="@string/glyph_settings_notifs_sub_toggle_title" />

        <ListPreference
            android:key="glyph_settings_notifs_sub_animations"
            android:title="@string/glyph_settings_notifs_sub_animations_title"
            android:defaultValue="@string/glyph_settings_notifs_animations_default"
            android:layout="@layout/preference"
            android:summary="%s" />

        <MultiSelectListPreference
            android:key="glyph_settings_notifs_sub_essential"
            android:title="@string/glyph_settings_notifs_sub_essential_title"
            android:dialogTitle="@string/glyph_settings_notifs_sub_essential_title"
            android:entries="@array/glyph_settings_empty_array_string"
            android:entryValues="@array/glyph_settings_empty_array_string"
            android:summary="@string/glyph_settings_notifs_sub_essential_summary"
            android:defaultValue="@array/glyph_settings_empty_array_string"
            android:positiveButtonText="@android:string/ok"
            android:negativeButtonText="@android:string/cancel" />

        <PreferenceCategory
            android:key="glyph_settings_notifs_sub"
            android:title="@string/glyph_settings_notifs_sub_title" />

</PreferenceScreen>
